# MOSS

./: .gitignore  README.md  grpo.ipynb  progressive_distil.ipynb  sft.ipynb
submissions/submission-89/: .gitignore  README.md  gmm_evaluation_tutorial.ipynb  pyproject.toml  requirements.txt
submissions/submission-89/config/: __init__.py  base.py  data.py  experiment.py  logging.py  metrics.py  model.py  presets.py  training.py  validation.py
submissions/submission-89/config/json_defaults/: experiment_simple.json  experiment_ultralight.json
submissions/submission-89/config/registry/: __init__.py  data_configs.py  model_configs.py  registry.py  training_configs.py  validation_configs.py
submissions/submission-89/data/: README.md  __init__.py  setup.py
submissions/submission-89/data/config/: __init__.py
submissions/submission-89/data/core/: __init__.py  data_generator.py  gmm_params.py  (+2 more)
submissions/submission-89/docs/: CLI_REFERENCE.md
submissions/submission-89/losses/: README.md  __init__.py  energy.py  mse.py  utils.py  wasserstein.py
submissions/submission-89/metrics/: README.md  __init__.py  configuration.py  factory.py  kmeans.py  registry.py  tracker.py  utils.py
submissions/submission-89/mi/: .gitignore  README.md  __init__.py  setup.py
submissions/submission-89/model/: __init__.py  blocks.py  factory.py  flow_speed.py  monotonic_flow.py  transformer.py
submissions/submission-89/training/: __init__.py  experiment.py  trainer.py
submissions/submission-89/utils/: __init__.py  checkpointing.py  model_management.py  visualization.py
(+373 files in other folders)
